# builder-coins

./: .env.example  README.md  package-lock.json  package.json  todo.md
.github/workflows/: deploy-agent.yaml
agent/: README.md  agent.py  pyproject.toml  test_simplified_agent.py  uniswap_functions.py  uniswap_universal_router.py
agent/.avctl/: config.toml
app/: layout.tsx  page.tsx
app/@footer/: page.tsx
app/@navbar/: page.tsx
app/api/fund-manager-allocation/: route.ts
app/api/fund-manager-portfolio/: route.ts
app/api/token-deployment/: route.ts
app/api/token-details/: route.ts
app/builder/: page.tsx
app/builder/[id]/: loading.tsx  page.tsx
app/fund/: page.tsx
app/search/: page.tsx
components/: builder-details.tsx  footer.tsx  fund-details.tsx  login.tsx  mini-profile-details.tsx  navbar.tsx
hooks/: useClanker.ts  useTokens.ts
lib/: config.ts  constants.ts  database-types.ts  mock-data.ts  providers.tsx  supabase.ts  types.ts  uniswap.ts  utils.ts
